--- a/app/package.json
+++ b/app/package.json
@@ -18,11 +18,14 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
+    "axios": "^1.7.9",
     "expo": "~52.0.19",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.2",
     "expo-haptics": "~14.0.0",
+    "expo-image-manipulator": "^13.0.5",
+    "expo-image-picker": "^16.0.3",
     "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.13",
@@ -44,7 +47,8 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "recharts": "^2.15.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "@react-native-community/datetimepicker": "8.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
