--- a/app/app.json
+++ b/app/app.json
@@ -13,9 +13,10 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/icon.png",
+        "foregroundImage": "./assets/images/icon-small.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.talhaad126.technotrends"
     },
     "web": {
       "bundler": "metro",
@@ -37,6 +38,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "8d4321f7-71df-4a60-a087-0ad308d69dca"
+      }
     }
   }
 }
