--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          cd server  
+          cd server  # Navigate to the server folder
           composer install --no-dev --optimize-autoloader  # Install dependencies
 
       - name: Deploy to technotrends.globalctg1.com
@@ -32,10 +32,11 @@ jobs:
           script: |
             cd /var/www/technotrends.globalctg1.com
 
-            git reset --hard 
+            git reset --hard  
             git clean -fd  
             git pull origin main  
 
+            # Rsync only contents of 'server' directory
             rsync -av --delete $GITHUB_WORKSPACE/server/ /var/www/technotrends.globalctg1.com/
 
             cd /var/www/technotrends.globalctg1.com
