--- a/app/package.json
+++ b/app/package.json
@@ -53,7 +53,8 @@
     "react-native-webview": "13.12.5",
     "recharts": "^2.15.0",
     "tailwindcss": "^3.4.17",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "expo-screen-orientation": "~8.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
