--- a/app/package.json
+++ b/app/package.json
@@ -23,7 +23,7 @@
     "axios": "^1.7.9",
     "expo": "~52.0.25",
     "expo-blur": "~14.0.2",
-    "expo-constants": "~17.0.3",
+    "expo-constants": "~17.0.8",
     "expo-font": "~13.0.2",
     "expo-haptics": "~14.0.1",
     "expo-image-manipulator": "~13.0.6",
@@ -54,7 +54,10 @@
     "recharts": "^2.15.0",
     "tailwindcss": "^3.4.17",
     "zustand": "^5.0.3",
-    "expo-screen-orientation": "~8.0.4"
+    "expo-screen-orientation": "~8.0.4",
+    "expo-notifications": "~0.29.14",
+    "expo-device": "~7.0.3",
+    "expo-dev-client": "~5.0.20"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
