--- a/app/.gitignore
+++ b/app/.gitignore
@@ -36,3 +36,8 @@ yarn-error.*
 *.tsbuildinfo
 
 app-example
+
+# Firebase
+google-services.json
+GoogleService-Info.plist
+firebase-service-account-*.json
