--- a/app/app.json
+++ b/app/app.json
@@ -21,20 +21,18 @@
         "backgroundColor": "#ffffff"
       },
       "package": "com.talhaad126.technotrends",
-      "googleServicesFile": "./google-services.json",
-      "permissions": [
-        "RECEIVE_BOOT_COMPLETED",
-        "VIBRATE",
-        "WAKE_LOCK",
-        "com.google.android.c2dm.permission.RECEIVE"
-      ]
-    },
-    "notification": {
-      "icon": "./assets/images/icon-small.png",
-      "color": "#A82F39",
-      "iosDisplayInForeground": true,
-      "androidMode": "default",
-      "androidCollapsedTitle": "TechnoTrends"
+      "googleServicesFile": {
+        "development": "$GOOGLE_SERVICES_JSON",
+        "preview": "$GOOGLE_SERVICES_JSON",
+        "production": "$GOOGLE_SERVICES_JSON"
+      },
+      "notification": {
+        "icon": "./assets/images/icon-small.png",
+        "color": "#A82F39",
+        "androidMode": "default",
+        "androidCollapsedTitle": "#{unread_notifications} new interactions",
+        "iosDisplayInForeground": true
+      }
     },
     "web": {
       "bundler": "metro",
@@ -76,7 +74,7 @@
         "origin": false
       },
       "eas": {
-        "projectId": "8d4321f7-71df-4a60-a087-0ad308d69dca"
+        "projectId": "1e3c9b2a-7f4d-4c8b-9e1a-2b3c4d5e6f7g"
       }
     }
   }
