--- a/app/eas.json
+++ b/app/eas.json
@@ -1,13 +1,8 @@
 {
   "build": {
     "development": {
-      "developmentClient": true,
-      "distribution": "internal",
-      "android": {
-        "buildType": "apk"
-      },
       "ios": {
-        "simulator": false
+        "simulator": true
       }
     },
     "preview": {
